Fix for Overflow-x

--- a/frontend/rea-list/src/styles/HomePage.css
+++ b/frontend/rea-list/src/styles/HomePage.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    overflow-x: hidden;
 }
 .full-page {
     color: white;
